--- a/assets/css/bootstrap-theme.css
+++ b/assets/css/bootstrap-theme.css
@@ -8,7 +8,7 @@
 }
 
 .navbar-inverse .navbar-nav > li > a,
-.navbar-inverse .navbar-nav > .open ul > a { color:rgba(255, 255, 255, .4); }
+.navbar-inverse .navbar-nav > .open ul > a { color:rgba(138, 43, 226, .4); }
 
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover, 
@@ -33,18 +33,18 @@
 	-webkit-border-radius: 0px; -moz-border-radius: 0px; border-radius: 0px;
 	-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
 }
-.navbar-nav .dropdown-menu > li > a { color:rgba(255, 255, 255, .7); padding:7px 20px; }
+.navbar-nav .dropdown-menu > li > a { color:rgba(138, 43, 226, .7); padding:7px 20px; }
 	.navbar-nav .dropdown-menu > li > a:hover,
 	.navbar-nav .dropdown-menu > li > a:focus,
-	.navbar-nav .dropdown-menu > .active > a:hover{ background: rgba(255, 255, 255, .1); color:white; }
+	.navbar-nav .dropdown-menu > .active > a:hover{ background: rgba(138, 43, 226, .1); color:white; }
 
 .navbar-nav .dropdown-menu > .active > a,
 .navbar-nav .dropdown-menu > .active > a:focus { background: none; color:#fff; }
 
-.navbar-nav .btn { border:1px solid rgba(255, 255, 255, .2); margin-left:5px; margin-top:5px; padding-top:10px; padding-bottom:10px; }
+.navbar-nav .btn { border:1px solid rgba(138, 43, 226, .2); margin-left:5px; margin-top:5px; padding-top:10px; padding-bottom:10px; }
 
 .navbar-nav a.btn:focus, 
-.navbar-nav a.btn:hover  { border:1px solid rgba(255,255,255,.6); }
+.navbar-nav a.btn:hover  { border:1px solid rgba(138,43,226,.6); }
 
 .navbar-collapse { border:0 none;  border-top:0 none; box-shadow: none; }
 @media (max-width: 767px) {
@@ -69,17 +69,17 @@
 
 .btn { padding: 10px 40px; font-weight: bold; border:0 none; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
 .btn-lg { padding: 15px 65px; font-size: 14px; font-weight:bold; }
-.btn-default { text-shadow: none; background:transparent; color:rgba(50,50,50,.5); -webkit-box-shadow:inset 0px 0px 0px 3px rgba(50,50,50,.5); -moz-box-shadow:inset 0px 0px 0px 3px rgba(50,50,50,.5); box-shadow:inset 0px 0px 0px 3px rgba(50,50,50,.5); }
+.btn-default { text-shadow: none; background:transparent; color:rgba(138,43,226,.5); -webkit-box-shadow:inset 0px 0px 0px 3px rgba(138,43,226,.5); -moz-box-shadow:inset 0px 0px 0px 3px rgba(138,43,226,.5); box-shadow:inset 0px 0px 0px 3px rgba(138,43,226,.5); }
 	.btn-default:hover,
-	.btn-default:focus { color:rgba(50,50,50,.8); -webkit-box-shadow:inset 0px 0px 0px 3px rgba(50,50,50,.8); -moz-box-shadow:inset 0px 0px 0px 3px rgba(50,50,50,.8); box-shadow:inset 0px 0px 0px 3px rgba(50,50,50,.8); background: transparent; }
+	.btn-default:focus { color:rgba(138,43,226,.8); -webkit-box-shadow:inset 0px 0px 0px 3px rgba(138,43,226,.8); -moz-box-shadow:inset 0px 0px 0px 3px rgba(138,43,226,.8); box-shadow:inset 0px 0px 0px 3px rgba(138,43,226,.8); background: transparent; }
 	.btn-default:active,
 	.btn-default.active { color:#333; -webkit-box-shadow:inset 0px 0px 0px 3px #333; -moz-box-shadow:inset 0px 0px 0px 3px #333; box-shadow:inset 0px 0px 0px 3px #333; background: transparent; }
 	
 .btn-action,
-.btn-primary { color:#FFEFD7; background-image: -webkit-linear-gradient(top, #FF9B22 0%, #FF8C00 100%); background-image: linear-gradient(to bottom, #FF9B22 0%, #FF8C00 100%); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffFF9B22', endColorstr='#ffFF8C00', GradientType=0); filter: progid:DXImageTransform.Microsoft.gradient(enabled = false); background-repeat: repeat-x; border:0 none; }
+.btn-primary { color:#FFEFD7; background-image: -webkit-linear-gradient(top, #8A2BE2 0%, #0000FF 100%); background-image: linear-gradient(to bottom, #8A2BE2 0%, #0000FF 100%); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff8A2BE2', endColorstr='#ff0000FF', GradientType=0); filter: progid:DXImageTransform.Microsoft.gradient(enabled = false); background-repeat: repeat-x; border:0 none; }
 	.btn-action:hover,
-	.btn-action:focus { color:#fff; background: #FF9B22; }
-	.btn-action:active {	background: #FF8C00; }
+	.btn-action:focus { color:#fff; background: #8A2BE2; }
+	.btn-action:active {	background: #0000FF; }
 
 
 /*******************************/
